fix spacing error on work page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -24,10 +24,9 @@
 }
 
 .workdiv{
-	margin: 15px;
-	padding: 15px;
+	padding: 50px;
 	font-family: sans-serif;
-	font-size: 15px;
+	font-size: 20px;
 }
 
 #workdivcontainer{
